# displacy

./: .gitignore  Dockerfile  Makefile  README.md  example.py  example2.py  main.py  pyproject.toml
.github/workflows/: build.yml  check.yml
src/displacy/: __init__.py  defaults.py  html.py  main.py  makehtml.py  model.py  render.py  render_et.py  templates.py  util.py
terraform/: main.tf
